--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -238,10 +238,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fefb59d3ac8>"
+       "<folium.map.Marker at 0x7f436b67bac8>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
